[package]
name = "batiskaf_derive"
version = "0.1.0"
authors = ["Yakov Bakhmatov <yakov@bakhmatov.ru>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
batiskaf = { version = "0.1", path = "../batiskaf" }
rusqlite = "0.16"
