[package]
name = "batiskaf_derive"
version = "0.17.0"
authors = ["Yakov Bakhmatov <yakov@bakhmatov.ru>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
batiskaf = { version = "0.17", path = "../batiskaf" }

[target.'cfg(not(windows))'.dev-dependencies]
rusqlite = "0.17"

[target.'cfg(windows)'.dev-dependencies]
rusqlite = { version = "0.17", features = ["bundled"] }
