[package]
name = "batiskaf_derive"
version = "0.25.1"
authors = ["Yakov Bakhmatov <yakov@bakhmatov.ru>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
batiskaf = { version = "0.25", path = "../batiskaf" }

[target.'cfg(not(windows))'.dev-dependencies]
rusqlite = "0.25"

[target.'cfg(windows)'.dev-dependencies]
rusqlite = { version = "0.25", features = ["bundled"] }
